Fixed wrong conversions to YAML

--- a/content/publication/MRSZ-2018.md
+++ b/content/publication/MRSZ-2018.md
@@ -16,25 +16,15 @@ authors:
 # 4 = Technical report
 # 5 = Book
 # 6 = Book chapter
-publication_types: "6"
+publication_types:
+  - "6"
 
 # Publication name and optional abbreviated version.
 publication: 'Open Sourcing: Investigación y formación avanzada en arquitectura'
 publication_short: ""
 
 # Abstract and optional shortened version.
-abstract: Desde finales de 2013 el grupo de investigación Arquitecturas Open Source
-  de la ETSA-USJ ha iniciado una colaboración con el Colegio Profesional de Trabajadores
-  Sociales de Aragón para la realización conjunta de un mapa de riesgo social de Zaragoza.
-  Dicho proyecto, financiado desde el Ministerio de Economía y Competitividad, pretende
-  desarrollar el concepto de mapa de riesgo anunciado en la Ley de de 2009 de Ordenación
-  del Territorio de Aragón mediante el diseño de una metodología mixta que ofrezca
-  un procedimiento alternativo para la evaluación de las zonas y barrios de Zaragoza
-  más sensibles a la pérdida de relaciones sociocomunitarias de vecindad y de interrelación
-  con el resto de la ciudad. El objetivo es lograr una metodología que incorpore el
-  ámbito de lo social como plataforma desde la que poder evaluar los riesgos inducidos
-  en el territorio urbanizado y que esta pueda ser replicable en otras ciudades a
-  propósito del estudio.
+abstract: "Desde finales de 2013 el grupo de investigación Arquitecturas Open Source de la ETSA-USJ ha iniciado una colaboración con el Colegio Profesional de Trabajadores Sociales de Aragón para la realización conjunta de un mapa de riesgo social de Zaragoza. Dicho proyecto, financiado desde el Ministerio de Economía y Competitividad, pretende desarrollar el concepto de mapa de riesgo anunciado en la Ley de de 2009 de Ordenación del Territorio de Aragón mediante el diseño de una metodología mixta que ofrezca un procedimiento alternativo para la evaluación de las zonas y barrios de Zaragoza más sensibles a la pérdida de relaciones sociocomunitarias de vecindad y de interrelación con el resto de la ciudad. El objetivo es lograr una metodología que incorpore el  ámbito de lo social como plataforma desde la que poder evaluar los riesgos inducidos en el territorio urbanizado y que esta pueda ser replicable en otras ciudades a propósito del estudio."
 abstract_short: ""
 
 # Featured image thumbnail (optional)
